crates/keron-lang/tests/corpus/errors/check/interpolation_inner_type_error.keron
val a = "bad: ${"hello" + 1}"
